--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <span class="nav-link nav-right hidden" id="nav-welcome">
         <a href="#" id="nav-user-profile"></a>
       </span>
-      <a class="hidden nav-right" id="nav-logout" href="#">
+      <a class="hidden" id="nav-logout" href="#">
         <small>(logout)</small>
       </a>
     </nav>
